update | slicing sidebar-navigation

--- a/src/assets/scss/base/typography.scss
+++ b/src/assets/scss/base/typography.scss
@@ -1,12 +1,4 @@
-// 525252
-// 414141
-//
-//
-
-$primary: #ca3e47;
-$secondary: #313131;
-// $primary: #ca3e47;
-// $primary: #ca3e47;
+@import "./config.scss";
 
 @font-face{
     font-family: "mison";
