--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,3 +10,10 @@
 @import "./component/task-preview-chart.scss";
 
 // ==========><>|Component|<><==========
+
+// ==========><>|Layout|<><==========
+
+@import "./layout/side-navigation.scss";
+@import "./layout/dashboard-body.scss";
+
+// ==========><>|Layout|<><==========
