--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,7 @@
 
 @import "./component/header.scss";
 @import "./component/task-preview-chart.scss";
+@import "./component/dashboard-panel.scss";
 
 // ==========><>|Component|<><==========
 
