--- a/src/assets/scss/layout/dashboard-body.scss
+++ b/src/assets/scss/layout/dashboard-body.scss
@@ -1,12 +1,23 @@
-.dashboard_body{
-    width: 100%;
-    height: fit-content;
-    display: flex;
+@import './../base/config.scss';
 
-    &-content{
-        position: relative;
-        width: calc(100% - 50px);
+body{
+    // background: $secondary-light;
+
+    .dashboard_body{
+        width: 100%;
         height: fit-content;
-        margin-left: auto;
+        display: flex;
+        padding-top: 15px;
+
+        &-content{
+            position: relative;
+            width: calc(100% - 50px);
+            height: fit-content;
+            margin-left: auto;
+
+            .container-fluid{
+                position: relative;
+            }
+        }
     }
 }
