update | update custom radio button

--- a/src/assets/scss/base/config.scss
+++ b/src/assets/scss/base/config.scss
@@ -2,3 +2,9 @@ $primary: #ca3e47;
 $secondary: #313131;
 $secondary-accend: #414141;
 $secondary-light: #525252;
+
+$green: #28a745;
+$yellow: #ffc107;
+$red: #dc3545;
+$gray: #6c757d;
+$blue: #17a2b8;
