--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./component/header.scss";
 @import "./component/task-preview-chart.scss";
 @import "./component/dashboard-panel.scss";
+@import "./component/radio-button.scss";
 
 // ==========><>|Component|<><==========
 
@@ -16,5 +17,6 @@
 
 @import "./layout/side-navigation.scss";
 @import "./layout/dashboard-body.scss";
+@import "./layout/task-list.form.scss";
 
 // ==========><>|Layout|<><==========
