update | task-list layout and style

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./component/task-preview-chart.scss";
 @import "./component/dashboard-panel.scss";
 @import "./component/radio-button.scss";
+@import "./component/task-list-order.scss";
 
 // ==========><>|Component|<><==========
 
