update | add remove-task-list on task-list-order

--- a/src/assets/scss/component/task-list-order.scss
+++ b/src/assets/scss/component/task-list-order.scss
@@ -39,7 +39,8 @@
 
         &-control{
             width: fit-content;
-
+            display: flex;
+            flex-direction: column;
             svg{
                 width: 15px;
                 height: 15px;
@@ -47,6 +48,11 @@
                 path{
                     fill: #ffffff;
                 }
+            }
+
+            p{
+                margin: 0;
+                cursor: pointer;
             }
         }
     }
