--- a/src/assets/scss/component/radio-button.scss
+++ b/src/assets/scss/component/radio-button.scss
@@ -26,7 +26,7 @@
             margin: auto;
         }
 
-        &-priority{
+        &-1{
             border: 3px solid $red;
 
             &-active{
@@ -36,17 +36,17 @@
             }
         }
 
-        &-less_important{
+        &-2{
             border: 3px solid $yellow;
 
             &-active{
                 &::after{
-                background: $yellow;
+                    background: $yellow;
                 }
             }
         }
 
-        &-minor{
+        &-3{
             border: 3px solid $blue;
 
             &-active{
@@ -56,7 +56,7 @@
             }
         }
 
-        &-not_important{
+        &-0{
             border: 3px solid $gray;
 
             &-active{
